@@ -1,8 +1,13 @@
 {{$NEXT}}
 
+ * Added a reference-sequence-selection dropdown box, similar to the
+   old one, that is on by default if fewer than 30 reference
+   sequences, otherwise it's off unless `refSeqDropdown: true` is set
+   in the configuration (issue #138).
+
  * Fixed bug in which popup dialog boxes showing other websites showed
    the website in only the top portion of the dialog box.  Only
-   present in some browsers. (issue #149).
+   present in some browsers (issue #149).
 
  * Fix coordinate display bug in feature detail popups.  The feature's
    position was being displayed in interbase coordinates, but should
@@ -10,7 +15,7 @@
    pointing this out.
 
  * Added a `style.height` option to Wiggle tracks to control the
-   track's height in pixels (issue 131). (Erik Derohanian)
+   track's height in pixels (issue #131). (Erik Derohanian)
 
  * Added support for a `style.trackLabelCss` configuration variable to
    allow customizing the appearance of the label for a particular
